# django-deep

./: .gitignore  .semgrepignore  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README.md  dev.py  manage.py  pyproject.toml  pytest.ini  setup.py
.cursor/rules/: assistant-guidelines.md
django_deep/: __init__.py  config.py  manager.py  parser.py  queryset.py
django_deep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_deep/filters/: __init__.py  filters.py  manager.py
django_deep/functions/: __init__.py  jsonextract.py
django_deep/subqueries/: __init__.py  concatvalues.py  count_sum.py  extractvalues.py  jsonagg.py  jsonextract.py  methodfrom.py
docs/: AI.md  README.md  development.md  purpose.md  structure.md
src/django_deep/: config.py  parser.py  queryset.py
src/django_deep/filters/: manager.py
src/django_deep/subqueries/: concatvalues.py  count_sum.py  extractvalues.py  jsonextract.py  methodfrom.py
testapp/: __init__.py  setup.py
testapp/csv/: db.csv  filters.csv
tests/: conftest.py  models.py  settings.py  setup.py  test_django.py  test_filters.py  test_manager.py  test_parser.py  test_queryset.py  urls.py
tests/testapp/: __init__.py  models.py  settings.py  setup.py
tests/testapp/csv/: db.csv  filters.csv  parser.csv  queryset.csv
tests/testapp/migrations/: 0001_initial.py  0002_alter_email_created_at_alter_email_date_at_and_more.py
