[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-deep"
version = "0.1.0"
description = "Django Enhanced Expression Parser"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
authors = [
  { name = "hicinformatic", email = "hicinformatic@gmail.com" }
]
dependencies = ["Django>=3.2"]

[project.urls]
"Homepage" = "https://github.com/hicinformatic/django-deep"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-django",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F"]
